--- a/ArknightsToolkit.csproj
+++ b/ArknightsToolkit.csproj
@@ -120,6 +120,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="Helper\ByteArrayToBitmapImageExtension.cs" />
+    <Compile Include="Models\StoryButtonInfomation.cs" />
     <Compile Include="Services\NavigationService.cs" />
     <Compile Include="Services\TitleBarService.cs" />
     <Compile Include="ViewModels\FrontPageViewModel.cs" />
@@ -188,12 +190,19 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
+      <Version>7.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.5.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Helper\" />
+    <ProjectReference Include="..\ArknightsToolkit.Resources\ArknightsToolkit.Resources.csproj">
+      <Project>{b6cec746-5383-4542-9ac2-d9c3ddd11d80}</Project>
+      <Name>ArknightsToolkit.Resources</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
