--- a/ArknightsToolkit.csproj
+++ b/ArknightsToolkit.csproj
@@ -120,10 +120,11 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Commands\DelegateCommand.cs" />
+    <Compile Include="Commands\NavigationCommand.cs" />
     <Compile Include="Helper\ByteArrayToBitmapImageExtension.cs" />
     <Compile Include="Models\StoryButtonInfomation.cs" />
-    <Compile Include="Services\NavigationService.cs" />
-    <Compile Include="Services\TitleBarService.cs" />
+    <Compile Include="Helper\NavigationHelper.cs" />
+    <Compile Include="Helper\TitleBarHelper.cs" />
     <Compile Include="ViewModels\FrontPageViewModel.cs" />
     <Compile Include="ViewModels\NotificationObject.cs" />
     <Compile Include="ViewModels\OperatorListsViewModel.cs" />
@@ -189,6 +190,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.10</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Animations">
+      <Version>7.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>7.0.0</Version>
