添加档案显示和配音&画师显示功能,修复了在退出干员列表页面后干员的图片仍存在的问题

--- a/ArknightsToolkit.csproj
+++ b/ArknightsToolkit.csproj
@@ -123,17 +123,23 @@
     </Compile>
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="Commands\NavigationCommand.cs" />
-    <Compile Include="Helper\ByteArrayToBitmapImageConverter.cs" />
+    <Compile Include="Helper\Conventer\ByteArrayToBitmapImageConverter.cs" />
     <Compile Include="Helper\ByteArrayToBitmapImageExtension.cs" />
-    <Compile Include="Helper\OperatorChildrenToOperatorImageConverter.cs" />
+    <Compile Include="Helper\Conventer\OperatorChildrenToOperatorImageConverter.cs" />
     <Compile Include="Helper\CodenameToBitmapImageExtension.cs" />
-    <Compile Include="Helper\GetInfomationFromListOfOperatorInfoHelper.cs" />
-    <Compile Include="Helper\OperatorChildrenToClassImageConverter.cs" />
+    <Compile Include="Helper\Conventer\OperatorProfileTypeToStringConverter.cs" />
+    <Compile Include="Helper\GetInfomationFromOperatorChildrenHelper.cs" />
+    <Compile Include="Helper\Conventer\OperatorChildrenToClassImageConverter.cs" />
     <Compile Include="Helper\OperatorComparer.cs" />
     <Compile Include="Helper\OperatorComparerOption.cs" />
-    <Compile Include="Helper\OperatorTypeToStringConverter.cs" />
+    <Compile Include="Helper\Conventer\OperatorChildrenToCVConverter.cs" />
+    <Compile Include="Helper\Conventer\OperatorChildrenToIllustratorConverter.cs" />
+    <Compile Include="Helper\Conventer\OperatorTypeToStringConverter.cs" />
     <Compile Include="Models\Operators\OperatorChildren.cs" />
     <Compile Include="Models\Operators\OperatorInfo.cs" />
+    <Compile Include="Models\Operators\OperatorProfile.cs" />
+    <Compile Include="Models\Operators\OperatorProfiles.cs" />
+    <Compile Include="Models\Operators\OperatorProfileType.cs" />
     <Compile Include="Models\Operators\OperatorType.cs" />
     <Compile Include="Models\StoryButtonInfomation.cs" />
     <Compile Include="Helper\NavigationHelper.cs" />
