--- a/ArknightsToolkit.csproj
+++ b/ArknightsToolkit.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Helper\TitleBarHelper.cs" />
     <Compile Include="ViewModels\FrontPageViewModel.cs" />
     <Compile Include="ViewModels\NotificationObject.cs" />
+    <Compile Include="ViewModels\NotifyInstallPackageDialogViewModel.cs" />
     <Compile Include="ViewModels\OperatorDetailsViewModel.cs" />
     <Compile Include="ViewModels\OperatorListsViewModel.cs" />
     <Compile Include="ViewModels\StoryPageViewModel.cs" />
@@ -150,6 +151,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\XmlService.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
+    <Compile Include="Views\NotifyInstallPackageDialog.xaml.cs">
+      <DependentUpon>NotifyInstallPackageDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\OperatorDetails.xaml.cs">
       <DependentUpon>OperatorDetails.xaml</DependentUpon>
     </Compile>
@@ -210,6 +214,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\NotifyInstallPackageDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\OperatorDetails.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -234,14 +242,15 @@
       <Version>7.0.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.6.0</Version>
+      <Version>2.6.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArknightsResources\ArknightsResources.Helpers.WindowsRuntime\ArknightsResources.Helpers.WindowsRuntime.csproj">
-      <Project>{959B2F8F-7372-4E92-B9C4-47A27F8F0B32}</Project>
-      <Name>ArknightsResources.Helpers.WindowsRuntime</Name>
-    </ProjectReference>
+    <Reference Include="ArknightsToolkit.OperatorPack">
+      <HintPath>..\ArknightsToolkit.OperatorPack\bin\x64\Debug\Reference\ArknightsToolkit.OperatorPack.winmd</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\ArknightsResources\ArknightsResources.Models.WindowsRuntime\ArknightsResources.Models.WindowsRuntime.csproj">
       <Project>{6941359F-9731-4CB7-A334-B920DA8E5C24}</Project>
       <Name>ArknightsResources.Models.WindowsRuntime</Name>
