--- a/ArknightsToolkit.csproj
+++ b/ArknightsToolkit.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Commands\DelegateCommand.cs" />
     <Compile Include="Commands\NavigationCommand.cs" />
     <Compile Include="Helper\ByteArrayToBitmapImageExtension.cs" />
+    <Compile Include="Helper\Converter\OperatorVocalTypeToStringConverter.cs" />
     <Compile Include="Helper\OperatorInfosGetter.cs" />
     <Compile Include="Helper\CodenameToBitmapImageExtension.cs" />
     <Compile Include="Helper\Converter\OperatorProfileTypeToStringConverter.cs" />
@@ -229,6 +230,9 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.13</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Toolkit.Uwp">
+      <Version>7.1.2</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Animations">
       <Version>7.1.2</Version>
     </PackageReference>
@@ -236,17 +240,21 @@
       <Version>7.1.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.7.0</Version>
+      <Version>2.7.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ArknightsResources\ArknightsResources.Operators\ArknightsResources.Operators.csproj">
-      <Project>{e84b2ecc-f6ab-4748-863d-3975ac31b958}</Project>
-      <Name>ArknightsResources.Operators</Name>
-    </ProjectReference>
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Services\" />
+    <ProjectReference Include="..\ArknightsResources\ArknightsResources.Operators.Models\ArknightsResources.Operators.Models.csproj">
+      <Project>{e86dbe06-f941-4ae1-8ff6-e3a04ab0be50}</Project>
+      <Name>ArknightsResources.Operators.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ArknightsResources\ArknightsResources.Operators.Resources\ArknightsResources.Operators.Resources.csproj">
+      <Project>{acf9800c-7ea0-4d15-95b8-1ac30466691c}</Project>
+      <Name>ArknightsResources.Operators.Resources</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
