--- a/ArknightsToolkit.csproj
+++ b/ArknightsToolkit.csproj
@@ -137,6 +137,8 @@
     <Compile Include="Models\StoryButtonInfomation.cs" />
     <Compile Include="Helper\NavigationHelper.cs" />
     <Compile Include="Helper\TitleBarHelper.cs" />
+    <Compile Include="Services\OperatorResourceService.cs" />
+    <Compile Include="Services\Settings.cs" />
     <Compile Include="ViewModels\FrontPageViewModel.cs" />
     <Compile Include="ViewModels\NotificationObject.cs" />
     <Compile Include="ViewModels\OperatorDetailsViewModel.cs" />
@@ -156,6 +158,9 @@
     <Compile Include="Views\OperatorLists.xaml.cs">
       <DependentUpon>OperatorLists.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\SettingsContentDialog.xaml.cs">
+      <DependentUpon>SettingsContentDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\StoryPage.xaml.cs">
       <DependentUpon>StoryPage.xaml</DependentUpon>
     </Compile>
@@ -166,6 +171,8 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\GitHub-Mark-32px.png" />
+    <Content Include="Assets\GitHub-Mark-Light-32px.png" />
     <Content Include="Assets\UI\ui_operators_background.png" />
     <Content Include="Assets\UI\ui_records.png" />
     <Content Include="Assets\UI\ui_star.png" />
@@ -217,17 +224,24 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\SettingsContentDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\StoryPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="ArknightsResources.Operators.Resources">
-      <Version>0.2.1-alpha</Version>
+    <PackageReference Include="ArknightsResources.Operators.IllustResources">
+      <Version>0.3.9-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="ArknightsResources.Operators.TextResources">
+      <Version>0.1.10-alpha</Version>
     </PackageReference>
     <PackageReference Include="ArknightsResources.Utility">
-      <Version>0.1.5-alpha</Version>
+      <Version>0.2.6-alpha</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
       <Version>6.0.0</Version>
@@ -250,9 +264,7 @@
       <Version>2.7.1</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
